--- a/index.css
+++ b/index.css
@@ -148,3 +148,68 @@ li a {
   padding-left: 50px;
   font-family: "Roboto";
 }
+
+@media only screen and (max-width: 1000px) {
+  .grid-container {
+    grid-template-columns: auto auto;
+    grid-row-gap: 50px;
+
+  }
+
+  .sub-heading h1 {
+    font-size: 20px;
+  }
+
+  .title h1 {
+    font-size: 20px;
+  }
+}
+
+.about-card img {
+  float:left;
+  width: 60%;
+}
+
+.about-card h1 {
+  float: left;
+  margin-left: 50px;
+}
+.about-card p {
+  display: inline;
+  margin-top: 40px;
+}
+
+
+
+.blog-title {
+  font-family: "Roboto";
+  margin-top: 20px;
+  font-size: 15px;
+  text-align: center;
+}
+
+.main-image img{
+  width: 60%;
+  margin-left: 20%;
+}
+
+.blog-content {
+  width: 60%;
+  text-align: left;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.blog-content p {
+  font-size: 20px;
+  font-family: 'Ubuntu', sans-serif;
+
+}
+
+.blog-content img {
+  width: 100%;
+}
+
+.footer {
+  background-color: lightgrey;
+}
