--- a/index.css
+++ b/index.css
@@ -213,3 +213,44 @@ li a {
 .footer {
   background-color: lightgrey;
 }
+
+@media only screen and (max-width: 600px) {
+
+  .grid-container {
+    grid-template-columns: auto;
+  }
+
+  .gallery-grid {
+    grid-template-columns: auto auto;
+  }
+
+
+  .gallery-grid img {
+    margin-top: 20px;
+  }
+
+  .title {
+    margin-left: 0px;
+  }
+
+  .sub-heading h1 span {
+    font-size: 20px;
+    padding-right: 0px;
+  }
+
+  .blog-content p{
+    font-size: 17px;
+  }
+
+  #main-image {
+    content: url("https://www.elsetge.cat/myimg/f/193-1932858_tiger-8k-ultra-hd.jpg")
+  }
+
+  li {
+    font-size: 16px;
+    padding: 10px;
+  }
+
+
+
+}
